Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24555

QT 4.8 OpenGL ES cube demo can not compile

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0 Beta 2
    • 4.8.0
    • GUI: OpenGL
    • None
    • Windows 7 64

    Description

      ..\cube\mainwidget.cpp:-1: In member function 'void MainWidget::initTextures()':
      error: 'glActiveTexture' was not declared in this scope

      Attachments

        1. screenshot-1.jpg
          screenshot-1.jpg
          283 kB
        2. working_cube.zip
          36 kB
        For Gerrit Dashboard: QTBUG-24555
        # Subject Branch Project Status CR V

        Activity

          People

            rodal Samuel Rødal
            miroslavign Miroslav
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes