Made cube example not use glActiveTexture.

We're setting the default texture unit anyway, and glActiveTexture would
require resolving through QOpenGLFunctions.

Task-number: QTBUG-24555
Change-Id: Id8d660baaa1532e7b8e623673f501703c76fac65
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>